--- a/view/admin/mainAdmin-addProduct.html
+++ b/view/admin/mainAdmin-addProduct.html
@@ -440,7 +440,7 @@ body{
                                 <option value="조명">조명</option>
                                 <option value="홈데코">홈데코</option>
                                 <option value="패브릭">패브릭</option>
-                                <option value="수납/정리">수납/정리</option>
+                                <option value="수납정리">수납정리</option>
                             </select>
                         </td>
                         <td>
@@ -811,7 +811,7 @@ function changeMedium(e) {
     else if(e.value == "패브릭") {
         m = fabric;
     }
-    else if(e.value == "수납/정리") {
+    else if(e.value == "수납정리") {
         m = storage;
     }
 
