--- a/view/login/login.html
+++ b/view/login/login.html
@@ -205,9 +205,9 @@
     
     if(isEmpty(code) == false){
         Gokakao(code);
-        alert("if code값 있음");
+        console.log("if code값 있음");
     } else {
-        alert("if code값XXXX");
+        console.log("if code값XXXX");
     }
     
     //alert(code);
