--- a/view/community/story.html
+++ b/view/community/story.html
@@ -36,12 +36,12 @@
     .pop_box{
         position: relative;
         overflow: hidden;
-        margin-left: -19px;
+        margin: -0.1px 0 0 -19px;
         padding: 0px 16px 0px 16px;
         width: 130%;
         height: 0px;
         z-index: 3;
-        opacity: 1;
+        opacity: 0;
         transition: height .3s, opacity .3s;
         /* transition: all .3s; */
     }
