--- a/view/store/mainStore.html
+++ b/view/store/mainStore.html
@@ -198,12 +198,13 @@
 .pop_box{
     position: relative;
     overflow: hidden;
+    margin-top: -0.1px;
     margin-left: -19px;
     padding: 0px 16px 0px 16px;
     width: 130%;
     height: 0px;
     z-index: 3;
-    opacity: 1;
+    opacity: 0;
     transition: height .3s, opacity .3s;
     /* transition: all .3s; */
 }
@@ -627,7 +628,7 @@ function getProductSortCount(jdata) {
 		type:"get",
 		data:jdata,
 		success:function(count){ console.log(count); loadPage(count); },
-		error:function(){ alert('error'); }
+		error:function(){ console.log('error'); }
 	});
 }
 //페이지 처리를 하는 함수
